Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6910550/T6910550a.out
T6910550a.java:13:10: compiler.err.name.clash.same.erasure: m(java.util.List<java.lang.Integer>), m(java.util.List<java.lang.String>)
1 error
